feat: fix projectile boss hits and add boss attack variety

--- a/index.html
+++ b/index.html
@@ -108,9 +108,9 @@
       <div id="difficulty-view" class="menu-section" style="display: none">
         <h3>SELECT DIFFICULTY</h3>
         <div class="difficulty-select">
-          <button class="diff-btn" onclick="startGame('easy')">TOURIST</button>
-          <button class="diff-btn" onclick="startGame('medium')">NORMAL</button>
-          <button class="diff-btn" onclick="startGame('hard')">SERIOUS</button>
+          <button class="diff-btn" onclick="startGame('easy')">EASY</button>
+          <button class="diff-btn" onclick="startGame('medium')">MEDIUM</button>
+          <button class="diff-btn" onclick="startGame('hard')">HARD</button>
         </div>
         <button
           class="diff-btn"
@@ -128,7 +128,7 @@
       </div>
 
       <p class="controls-hint">
-        WASD to Move | SPACE to Jump | CLICK to Shoot | 1-3 Switch Weapon | F3 PERF
+        WASD Move | SPACE Jump | CLICK Shoot | 1-3 Weapons | HEADSHOTS = BONUS DMG | F3 PERF
       </p>
     </div>
 
